// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dropdown Custom Button Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-right"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4 primary"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          person
        </i>
         
        <span>
          Primary
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Custom Options 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    simple
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          simple
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          one
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Icon Only With Relative Parent 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: relative"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4 iconOnly"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Independent Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-left"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
        <i
          class="material-icons svelte-n2zup4"
        >
          settings
        </i>
         
        <span>
          options
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;

exports[`Storyshots Components/Dropdown Simple Array 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    current value is: 
    one
  </div>
   
  <div
    class="text-center"
    style="position: inherited"
  >
    <span
      class="wrapper svelte-1dsb53o"
    >
      <button
        class="svelte-n2zup4"
      >
         
        <span>
          one
        </span>
         
        <i
          class="material-icons arrow svelte-1dsb53o"
        >
          arrow_drop_down
        </i>
        
         
      </button>
    </span>
     
  </div>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
   
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
In eu mi bibendum neque egestas congue quisque egestas
Arcu non odio euismod lacinia at quis risus sed
Massa tempor nec feugiat nisl
Sagittis aliquam malesuada bibendum arcu vitae elementum
Elementum facilisis leo vel fringilla est ullamcorper eget nulla
Bibendum arcu vitae elementum curabitur vitae nunc sed velit dignissim
Elit sed vulputate mi sit amet mauris commodo
Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat
Lorem mollis aliquam ut porttitor leo a diam sollicitudin
Vitae proin sagittis nisl rhoncus mattis
Ut morbi tincidunt augue interdum velit euismod in pellentesque
Aliquam purus sit amet luctus venenatis lectus magna
Amet venenatis urna cursus eget
Et pharetra pharetra massa massa
Ac ut consequat semper viverra nam libero justo laoreet
Eget arcu dictum varius duis at consectetur lorem
Tellus id interdum velit laoreet id donec
Aliquam sem fringilla ut morbi
Consequat nisl vel pretium lectus quam id leo in vitae
Velit scelerisque in dictum non
Pretium aenean pharetra magna ac
Tincidunt arcu non sodales neque sodales ut etiam
Cursus eget nunc scelerisque viverra mauris in aliquam
Tortor at auctor urna nunc id cursus
Consequat interdum varius sit amet mattis vulputate enim nulla
Sagittis vitae et leo duis ut
Pretium lectus quam id leo in
Fusce ut placerat orci nulla pellentesque dignissim enim sit
Sed cras ornare arcu dui vivamus arcu.
  </p>
</section>
`;
